src/test/deca/context/invalid/test_class_inexistent_method.deca
// Description:
//    Programme verifiant qu'il est impossible d'utiliser une méthode qui n'existe pas
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 19 : La méthode getX n'est pas définie dans la classe A 
//
// Historique:
//    cree le 22/01/2021

class A  {
	int x ;
}
{
	A a = new A();
	println(a.getX());
}